--- a/application-code/app-tier/package.json
+++ b/application-code/app-tier/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js", // Assuming your entry point is "index.js"
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,3 +26,4 @@
     "node-fetch": "^2.6.1"
   }
 }
+
